# docs/swagger.json
@@ -12,9 +12,9 @@
     "host": "api.student-halls.com",
     "basePath": "/v0",
     "paths": {
-        "/product/all": {
+        "/university/all": {
             "get": {
-                "description": "Get all products",
+                "description": "Get all universities",
                 "consumes": [
                     "application/json"
                 ],
@@ -22,16 +22,16 @@
                     "application/json"
                 ],
                 "tags": [
-                    "products"
+                    "universities"
                 ],
-                "summary": "Get all products",
+                "summary": "Get all universities",
                 "responses": {
                     "200": {
-                        "description": "Products retrieved successfully",
+                        "description": "Universities retrieved successfully",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/product.ProductResponse"
+                                "$ref": "#/definitions/university.UniversityResponse"
                             }
                         }
                     },
@@ -45,14 +45,9 @@
                 }
             }
         },
-        "/product/create": {
+        "/university/create": {
             "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Create a new product",
+                "description": "Create a new university",
                 "consumes": [
                     "application/json"
                 ],
@@ -60,25 +55,25 @@
                     "application/json"
                 ],
                 "tags": [
-                    "products"
+                    "universities"
                 ],
-                "summary": "Create a new product",
+                "summary": "Create a new university",
                 "parameters": [
                     {
-                        "description": "Product object to be created",
-                        "name": "product",
+                        "description": "University object to be created",
+                        "name": "university",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/product.CreateProductRequest"
+                            "$ref": "#/definitions/university.CreateUniversityRequest"
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "Product created successfully",
+                        "description": "University created successfully",
                         "schema": {
-                            "$ref": "#/definitions/product.ProductResponse"
+                            "$ref": "#/definitions/university.UniversityResponse"
                         }
                     },
                     "400": {
@@ -98,14 +93,9 @@
                 }
             }
         },
-        "/product/createMany": {
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Create many products",
+        "/university/id/{id}": {
+            "get": {
+                "description": "Get university by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -113,117 +103,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "products"
+                    "universities"
                 ],
-                "summary": "Create many products",
+                "summary": "Get university by ID",
                 "parameters": [
                     {
-                        "description": "Products to be created",
-                        "name": "products",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/product.CreateProductRequest"
-                            }
-                        }
+                        "type": "string",
+                        "description": "University ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
-                "responses": {
-                    "201": {
-                        "description": "Products created successfully",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/product.ProductResponse"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request format or parameters",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            }
-        },
-        "/shop/all": {
-            "post": {
-                "description": "Get all shops",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "shops"
-                ],
-                "summary": "Get all shops",
                 "responses": {
                     "200": {
-                        "description": "Shops retrieved successfully",
+                        "description": "University retrieved successfully",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/shop.ShopResponse"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            }
-        },
-        "/shop/create": {
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Create a new shop",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "shops"
-                ],
-                "summary": "Create a new shop",
-                "parameters": [
-                    {
-                        "description": "Shop object to be created",
-                        "name": "shop",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/shop.CreateShopRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Shop created successfully",
-                        "schema": {
-                            "$ref": "#/definitions/shop.ShopResponse"
+                            "$ref": "#/definitions/university.UniversityResponse"
                         }
                     },
                     "400": {
@@ -233,8 +129,8 @@
                             "additionalProperties": true
                         }
                     },
-                    "500": {
-                        "description": "Internal server error",
+                    "404": {
+                        "description": "University not found",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -522,161 +418,65 @@
         }
     },
     "definitions": {
-        "product.CreateProductRequest": {
+        "university.CreateUniversityRequest": {
             "type": "object",
             "required": [
-                "category",
+                "coverImage",
+                "halls",
+                "location",
                 "name",
-                "sellerId",
-                "variants"
+                "numberOfStudents",
+                "website"
             ],
             "properties": {
-                "category": {
+                "coverImage": {
                     "type": "string"
                 },
-                "description": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "sellerId": {
-                    "type": "string"
-                },
-                "variants": {
+                "halls": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/product.CreateVariantRequest"
+                        "type": "string"
                     }
-                }
-            }
-        },
-        "product.CreateVariantRequest": {
-            "type": "object",
-            "required": [
-                "name",
-                "price",
-                "stock"
-            ],
-            "properties": {
-                "description": {
+                },
+                "location": {
                     "type": "string"
                 },
                 "name": {
                     "type": "string"
                 },
-                "price": {
-                    "type": "number"
-                },
-                "stock": {
-                    "type": "integer"
-                }
-            }
-        },
-        "product.ProductResponse": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "type": "string"
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "seller": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "variants": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/product.VariantResponse"
-                    }
-                }
-            }
-        },
-        "product.VariantResponse": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "number"
-                },
-                "stock": {
+                "numberOfStudents": {
                     "type": "integer"
                 },
-                "updatedAt": {
+                "website": {
                     "type": "string"
                 }
             }
         },
-        "shop.CreateShopRequest": {
-            "type": "object",
-            "required": [
-                "name",
-                "ownerId"
-            ],
-            "properties": {
-                "address": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "ownerId": {
-                    "type": "string"
-                }
-            }
-        },
-        "shop.ShopResponse": {
+        "university.UniversityResponse": {
             "type": "object",
             "properties": {
-                "address": {
+                "coverImage": {
                     "type": "string"
                 },
-                "createdAt": {
-                    "type": "string"
+                "halls": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "id": {
                     "type": "string"
                 },
+                "location": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 },
-                "ownerId": {
-                    "type": "string"
+                "numberOfStudents": {
+                    "type": "integer"
                 },
-                "products": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/product.ProductResponse"
-                    }
-                },
-                "updatedAt": {
+                "website": {
                     "type": "string"
                 }
             }
@@ -701,11 +501,14 @@
                 "password": {
                     "type": "string"
                 },
-                "phone": {
+                "university": {
                     "type": "string"
                 },
                 "username": {
                     "type": "string"
+                },
+                "yearOfStudy": {
+                    "type": "integer"
                 }
             }
         },
@@ -750,11 +553,14 @@
                 "lastName": {
                     "type": "string"
                 },
-                "phone": {
+                "university": {
                     "type": "string"
                 },
                 "username": {
                     "type": "string"
+                },
+                "yearOfStudy": {
+                    "type": "integer"
                 }
             }
         }
